Update chef portrait and fix testimonial images
- Replace about section image with uploaded Chef.jpg portrait
- Fix testimonial client photos using reliable pravatar service
- Enhance chef portrait styling with proper dimensions and gold border
- Ensure all images load correctly for better user experience

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <a href="#contact" class="btn btn-primary">Book Consultation</a>
         </div>
         <div class="about-image">
-          <img src="https://images.unsplash.com/photo-1577219491135-ce391730fb2c?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" alt="Bangura Event & Catering">
+          <img src="Chef.jpg" alt="Chef Patience - Bangura Event & Catering">
         </div>
       </div>
     </div>
@@ -327,7 +327,7 @@
         <div class="testimonial active">
           <div class="testimonial-content">
             <div class="client-photo">
-              <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Sarah">
+              <img src="https://i.pravatar.cc/100?img=1" alt="Sarah">
             </div>
             <p>"Bangura Event & Catering catered our wedding and it was absolutely perfect! The food was incredible and the presentation was stunning. Highly recommend!"</p>
             <div class="client-info">
@@ -346,7 +346,7 @@
         <div class="testimonial">
           <div class="testimonial-content">
             <div class="client-photo">
-              <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="Jasmine">
+              <img src="https://i.pravatar.cc/100?img=5" alt="Jasmine">
             </div>
             <p>"The best braids I've ever had! Bangura Event & Catering is so talented and professional. My hair looked amazing for weeks."</p>
             <div class="client-info">
@@ -365,7 +365,7 @@
         <div class="testimonial">
           <div class="testimonial-content">
             <div class="client-photo">
-              <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-4.0.3&auto=format&fit=crop&w=100&q=80" alt="David">
+              <img src="https://i.pravatar.cc/100?img=3" alt="David">
             </div>
             <p>"Professional, creative, and reliable. Bangura Event & Catering made our corporate event a huge success with amazing food and service."</p>
             <div class="client-info">
