Add clickable chef portrait with lightbox functionality
- Make chef portrait clickable in about section
- Add professional lightbox popup with chef information
- Include hover effects and smooth animations
- Display Chef Patience details in popup modal
- Close lightbox with X button or background click

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <a href="#contact" class="btn btn-primary">Book Consultation</a>
         </div>
         <div class="about-image">
-          <img src="Chef.jpg" alt="Chef Patience - Bangura Event & Catering">
+          <img src="Chef.jpg" alt="Chef Patience - Bangura Event & Catering" class="chef-portrait" onclick="openChefPortrait()">
         </div>
       </div>
     </div>
