Fix mobile navigation and shorten maintenance notice
- Shorten maintenance text to 'Still Undergoing Maintenance'
- Fix hamburger menu z-index to prevent overlapping issues
- Add auto-close functionality when clicking nav links
- Improve mobile menu UX with proper layering and shadows

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="top-bar">
       <div class="container">
         <div class="maintenance-notice">
-          <span><i class="fas fa-tools"></i> This website is currently undergoing maintenance - Some features may be temporarily unavailable</span>
+          <span><i class="fas fa-tools"></i> Still Undergoing Maintenance</span>
         </div>
         <div class="contact-info">
           <span><i class="fas fa-phone"></i> +1 (555) 123-4567</span>
